refactor: graphdbgateway